@@ -12,8 +12,6 @@ package org.junit.platform.launcher.listeners.discovery;
 
 import static org.junit.platform.commons.util.CollectionUtils.forEachInReverseOrder;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.platform.engine.DiscoveryIssue;
@@ -33,7 +31,7 @@ class CompositeLauncherDiscoveryListener implements LauncherDiscoveryListener {
 	private final List<LauncherDiscoveryListener> listeners;
 
 	CompositeLauncherDiscoveryListener(List<LauncherDiscoveryListener> listeners) {
-		this.listeners = Collections.unmodifiableList(new ArrayList<>(listeners));
+		this.listeners = List.copyOf(listeners);
 	}
 
 	@Override
